--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEATHER APP</title>
 </head>
-<body>
+<body onload="onLoad()">
     
+    <script src="index.js"></script>
 </body>
 </html>
