--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>WEATHER APP</title>
 </head>
 <body onload="onLoad()">
+
+    <div class="container">
+        <div id="location"></div>
+        <div id="condition"></div>
+        <div id="humidity"></div>
+        <div id="pressure"></div>
+        <div id="temperature"></div>
+        <div id="date"></div>
+        
+    </div>
     
     <script src="index.js"></script>
 </body>
