--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEATHER APP</title>
-</head>
-<body onload="onLoad()">
-
+  </head>
+  <body onload="onLoad()">
     <div class="container">
-        <div id="location"></div>
-        <div id="condition"></div>
-        <div id="humidity"></div>
-        <div id="pressure"></div>
-        <div id="temperature"></div>
-        <div id="date"></div>
-        
+      <div id="location"></div>
+      <div id="condition"></div>
+      <div id="humidity"></div>
+      <div id="pressure"></div>
+      <div id="temperature"></div>
+      <div id="date"></div>
     </div>
-    
+
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
