--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet" />
     <title>WEATHER APP</title>
   </head>
   <body onload="onLoad()">
     <div class="container">
-      <div id="location"></div>
-      <div id="condition"></div>
-      <div id="humidity"></div>
-      <div id="pressure"></div>
-      <div id="temperature"></div>
-      <div id="date"></div>
+      <div class="weather-box">
+        <div class="part1">
+          <div id="location"></div>
+          <div id="condition"></div>
+          <div id="humidity"></div>
+        </div>
+        <div class="part2">
+          <div id="pressure"></div>
+          <div id="temperature"></div>
+          <div id="date"></div>
+        </div>
+      </div>
     </div>
-
     <script src="index.js"></script>
   </body>
 </html>
