--- a/index.html
+++ b/index.html
@@ -12,13 +12,27 @@
       <div class="weather-box">
         <div class="part1">
           <div id="location"></div>
+          <div id="date"></div>
           <div id="condition"></div>
-          <div id="humidity"></div>
         </div>
         <div class="part2">
-          <div id="pressure"></div>
-          <div id="temperature"></div>
-          <div id="date"></div>
+          <div class="information">
+            Temperatura:
+            <div id="temperature"></div>
+            °
+          </div>
+
+          <div class="information">
+            Presion:
+            <div id="pressure"></div>
+            hPa
+          </div>
+
+          <div class="information">
+            Humedad:
+            <div id="humidity"></div>
+            %
+          </div>
         </div>
       </div>
     </div>
