--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body onload="onLoad()">
     <div class="container">
-      <div class="weather-box">
+      <div id="weather-box">
         <div class="part1">
           <div id="location"></div>
           <div id="date"></div>
@@ -23,7 +23,7 @@
           </div>
 
           <div class="information">
-            Presion:
+            Presión:
             <div id="pressure"></div>
             hPa
           </div>
@@ -35,6 +35,9 @@
           </div>
         </div>
       </div>
+
+      <div id="loader" class="spinner"></div>
+
     </div>
     <script src="index.js"></script>
   </body>
