--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
       </div>
 
       <div id="loader" class="spinner"></div>
-
+      <footer>Created by Matias Gonzalez</footer>
     </div>
+    
     <script src="index.js"></script>
   </body>
 </html>
